--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.11.2",
+    "react-webcam": "^7.1.0",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
   }
